Conclução da 1 parte CSS + Tarefa 2

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,8 @@
-p {
-    color: bisque;
-    background: #010108;
+/* 4 - external*/
+body {
+    padding-bottom: 500px;
+}
+
+h3 {
+    color: green;
 }
