--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,3 +6,30 @@ body {
 h3 {
     color: green;
 }
+
+/* classes */
+.paragraph {
+    background-color: black;
+    color: aqua;
+    padding: 5px;
+}
+
+/* id */
+#exclusive-title {
+    background-color: purple;
+    color: yellow;
+    padding: 10px;
+}
+
+/* ordem das regras */
+h2 {
+    border-bottom: 2px solid red;
+}
+
+.titulo {
+    border-bottom: 3px solid blue;
+}
+
+#algum-title {
+    border-bottom: 4px solid orangered;
+}
