--- a/CSS/style.css
+++ b/CSS/style.css
@@ -75,3 +75,139 @@ h2 {
     color: #161515;
     opacity: 0.5;
 }
+
+/* rgba com opacity */
+.rgba-opacity{
+    background-color: rgba(90, 120, 20, 0,2);
+    color: #161515;
+}
+
+/* IMG BACKGROUND */
+.bg-image {
+    background-image: url(./img/IMG_20240424_055244_785.jpg);
+    padding: 10px;
+    color: rgb(10, 10, 10);
+}
+
+/* IMG BG CENTRALIZADO */
+.not-centered-bg, .centered-bg {
+    width: 400px;
+    height: 400px;
+    background-image: url(./img/IMG_20240424_060102_794.jpg);
+}
+
+.centered-bg {
+    background-position: center;
+    background-size: cover;
+}
+
+/* box model lar e alt*/
+.height-width {
+    height: 100px;
+    width: 200px;
+    background-color: #273c5c;
+}
+
+.height-width-2 {
+    height: 300px;
+    background-color: #363636;
+}
+
+/* padding */
+.without-padding, .padding {
+    background-color: #161515;
+    color: aliceblue;
+
+}
+.padding {
+    background-color: #273c5c;
+    padding: 20px;
+}
+
+/* padding left, top, button, right */
+
+.padding-individual {
+    background-color: #286dd4;
+    color: aliceblue;
+    padding: 5px 10px 15px 20px;
+}
+
+/* padding com width */
+.without-border-box, .border-box {
+    background-color: #273c5c;
+    color: #161515;
+    width: 400px;
+    padding: 50px;
+}
+
+.border-box {
+    background-color: #363636;
+    box-sizing: border-box;
+}
+
+/* border */
+.border {
+    border: 5px solid red;
+    padding: 5px;
+}
+
+.border-2 {
+    border: 2px dotted blueviolet;
+}
+
+/* bordas individuais */
+.border-left {
+    border-left: 3px solid red;
+    background-color: #286dd4;
+    padding: 25px;
+}
+
+.border-bottom {
+    border-bottom: 8px solid rgb(116, 15, 15);
+    background-color: #161515;
+    padding: 25px;
+}
+
+/* borda radios */
+.rounded-p {
+    border-radius: 4px solid rgb(116, 15, 15);
+    background-color: #286dd4;
+    color: aliceblue;
+    padding: 15px;
+    border-radius: 15px;
+}
+
+.rounded-p-2 {
+    background-color: #161515;
+    color: aqua;
+    padding: 15px;
+    border-radius: 25px;
+}
+
+/* margem */
+.margin {
+    margin: 10px;
+    background-color: #286dd4;
+}
+
+.margin-top {
+    margin-top: 50px;
+    background-color: #161515;
+    padding: 10px;
+}
+
+.margin-shothand {
+    background-color: rgb(0, 24, 44);
+    color: aliceblue;
+    margin: 5px 10px 15px 20px;
+}
+
+/* Box model - todos elementos */
+.box-model {
+    margin: 20px;
+    padding: 15px 25px;
+    border: 3px solid #286dd4;
+    border-radius: 7px;
+    width: 200px;
+    height: 100px;
+}
