--- a/CSS/Projeto - Tributo/CSS/style.css
+++ b/CSS/Projeto - Tributo/CSS/style.css
@@ -37,23 +37,39 @@ html {
     margin-top: 30px;
 }
 
-.biography {
+.biography-container {
     padding: 25px 0;
     margin: 25px 0;
     border-top: 1px dashed #ddd;
     border-bottom: 1px dashed #ddd;
 }
 
-.quotes-container, blockquote {
+.quotes-container {
     background-color: #ddd;
     padding: 30px;
 }
 
-.quotes-container, blockquote {
+.quotes-container blockquote {
     font-weight: bold;
     font-size: 30px;
 }
 
 .quotes-container p {
     font-style: italic;
+}
+
+.curiosities-container {
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1 px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+.curiosities-container li {
+    height: 30px;
+}
+
+.img-bold {
+    font-weight: bold;
+    text-align: center;
 }
