--- a/CSS/1 - INTRO/style.css
+++ b/CSS/1 - INTRO/style.css
@@ -84,7 +84,7 @@ h2 {
 
 /* IMG BACKGROUND */
 .bg-image {
-    background-image: url(./img/IMG_20240424_055244_785.jpg);
+    background-image: url(../img/IMG_20240424_055244_785.jpg);
     padding: 10px;
     color: rgb(10, 10, 10);
 }
@@ -93,7 +93,7 @@ h2 {
 .not-centered-bg, .centered-bg {
     width: 400px;
     height: 400px;
-    background-image: url(./img/IMG_20240424_060102_794.jpg);
+    background-image: url(../img/IMG_20240424_060102_794.jpg);
 }
 
 .centered-bg {
