--- a/CSS/Desafio CSS/Tarefa 2/tarefa2.css
+++ b/CSS/Desafio CSS/Tarefa 2/tarefa2.css
@@ -29,3 +29,18 @@ ul {
     border: 4px solid #532929;
     border-radius: 15px 0px 15px 0px;
 }
+
+.fixed {
+    width: 10vw;
+    height: 10vh;
+    background-color: #940a0a;
+    border: 1px solid blue;
+    position: fixed;
+    top: 88vh;
+    right: 5vh;
+}
+
+.fixed a {
+    text-decoration: none;
+    color: #161515;
+}
