--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+:root {
+    --bg-color: rgb(252, 229, 229);
+    --color-text: #b59e67;
+}
+
 body {
     background-image: url(/IMG/program-background.jpg);
     background-position: center;
@@ -13,7 +18,8 @@ h1 {
     margin: auto;
     padding: 15px;
     text-align: center;
-    background-color: brown;
+    background-color: var(--bg-color);
+    opacity: 0.9;
     border-radius: 0 0 15px 15px;
 }
 
@@ -24,7 +30,7 @@ h1 {
     border-radius: 5px;
     width: 350px;
     height: auto;
-    background-color: rgb(252, 229, 229);
+    background-color: var(--bg-color);
     color: #678c99;
     opacity: 0.9;
 }
@@ -56,7 +62,7 @@ h1 {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 0.6em;
-    color: #b59e67;
+    color: var(--color-text);
 }
 
 .intro a:hover {
