--- a/CSS/Projeto -  HDC Host/css/style.css
+++ b/CSS/Projeto -  HDC Host/css/style.css
@@ -68,3 +68,24 @@ nav {
 }
 
 /* main banner */
+.main-banner {
+    background-image: url(../img/mainbanner.png);
+    padding: 10rem 0;
+    background-size: cover;
+    background-position: center;
+}
+
+.main-banner h1, .main-banner p {
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    text-shadow: #000 3px 2px 3px;
+}
+
+.main-banner h1 {
+    font-size: 54px;
+}
+
+.main-banner p {
+    font-size: 32px;
+}
