--- a/JS/10_JS_NO_NAVEGADOR/css/style.css
+++ b/JS/10_JS_NO_NAVEGADOR/css/style.css
@@ -35,6 +35,18 @@ b {
     text-decoration: underline;
     text-transform: uppercase;
 }
+
+li {
+    font-size: 1.5rem;
+    padding: 5px;
+    padding-bottom: 10px;
+    font-weight: bold;
+    list-style: none;
+}
+li a:hover {
+    cursor: pointer;
+    color: #161515;
+}
 /* responsividade */
 @media (max-width: 450px)  {
     p {
