criando js todolist

--- a/JS/Projeto_TodoList/css/style.css
+++ b/JS/Projeto_TodoList/css/style.css
@@ -10,6 +10,8 @@ body {
     background-image: url(../img/todo-list.jpg);
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
 }
 
 button {
