--- a/REACT/6_Calculadora_React/calculadora/src/components/Calcular.css
+++ b/REACT/6_Calculadora_React/calculadora/src/components/Calcular.css
@@ -27,4 +27,5 @@ h2 {
     border-radius: 5px;
     overflow: hidden;
     grid-template-columns: repeat(4, 25%);
+    grid-template-rows: 1fr 48px 48px 48px 48px 48px;
 }
