--- a/REACT/7_HTTP_REACT/htto_react/src/App.css
+++ b/REACT/7_HTTP_REACT/htto_react/src/App.css
@@ -40,3 +40,21 @@
 .read-the-docs {
   color: #888;
 }
+
+/* 2 Envio de dados Formulario */
+.add-product {
+  border-top: 1px solid #000;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+form label {
+  display: flex;
+  flex-direction: column;
+}
